--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Model.MainMenuActivity"
+        <activity android:name=".Model.MainActivity"
             android:label="@string/title_activity_main2"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -20,5 +20,6 @@
         </activity>
 
     </application>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
 </manifest>
