added line to manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         </activity>
         <activity android:name=".FriendInfo">
         </activity>
+        <activity android:name=".NewMeetingActivity">
+        </activity>
     </application>
 
 </manifest>
