Added Edit friend details functionality All activities/fragments that access the calendar now use ChooseDateFragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         </activity>
         <activity android:name=".NewMeetingActivity">
         </activity>
+        <activity android:name=".EditFriendDetails">
+        </activity>
     </application>
 
 </manifest>
