refactored classes and packages

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -21,11 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".FriendInfo">
+        <activity android:name=".Activities.FriendInfoActivity">
         </activity>
-        <activity android:name=".NewMeetingActivity">
+        <activity android:name=".Activities.NewMeetingActivity">
         </activity>
-        <activity android:name=".EditFriendDetails">
+        <activity android:name=".Activities.EditFriendActivity">
         </activity>
     </application>
 
