--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,12 @@
         </activity>
         <activity android:name=".Activities.EditFriendActivity">
         </activity>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBiE0loMjMLL5eYJTLw68QXoqqmiX7wmNM"/>
     </application>
 
 </manifest>
