Added meetinginfo page, added time picker dialogs, meetings are now recorded

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         </activity>
         <activity android:name=".Activities.EditFriendActivity">
         </activity>
+        <activity android:name=".Activities.MeetingInfoActivity">
+        </activity>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
