Added the remind in n minutes functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
 
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -34,13 +34,19 @@
         </activity>
         <activity android:name=".Activities.EditMeetingActivity">
         </activity>
-        <activity android:name=".Activities.UserProfileActivity"
-                  android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".Activities.UserProfileActivity"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".Activities.SettingsActivity"
-                  android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".Activities.SettingsActivity"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <service android:enabled="true" android:name=".Services.MeetingSuggestionService" />
+
+        <service
+            android:name=".Services.MeetingSuggestionService"
+            android:enabled="true"/>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
@@ -53,19 +59,23 @@
 
         <receiver android:name=".Services.AlarmReceiver">
             <intent-filter>
-                <action android:name="android.media.action.DISPLAY_NOTIFICATION" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.media.action.DISPLAY_NOTIFICATION"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </receiver>
         <receiver
-            android:name="s3585826.assignment1.Support_Code.NetworkChangeReceiver"
-            android:enabled="true" >
+            android:name=".Support_Code.NetworkChangeReceiver"
+            android:enabled="true">
             <intent-filter>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-                <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
-                <action android:name="android.net.wifi.STATE_CHANGE" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+                <action android:name="android.net.wifi.WIFI_STATE_CHANGED"/>
+                <action android:name="android.net.wifi.STATE_CHANGE"/>
             </intent-filter>
         </receiver>
+
+        <activity android:name=".Activities.MeetingReminderActivity">
+        </activity>
     </application>
 
 </manifest>
